k3s/infra/loki/loki-helm.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
