k3s/infra/loki/loki-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-ingress
  namespace: loki
spec:
  entryPoints:
    - websecure
  routes:
  - match: "Host(`loki-gateway.k3s.hackbox.cc`)"
    kind: Rule
    services:
    - name: loki-gateway
      kind: Service
      port: 80
      namespace: loki
  tls: {}
